@@ -9,7 +9,6 @@ version_from(   'lib/autodie/exception.pm');
 test_requires(	'Test::More');
 
 requires(	'perl' => '5.8.0');
-requires(	'Scope::Guard' => 0);
 
 recommends(	'IPC::System::Simple' => '0.12'); # For autodying system()
 
