@@ -46,6 +46,10 @@ Revision history for Fatal
           objects (which need lots of extra work under 5.8) to
           regular hashes (which don't need extra work).
 
+        * INTERNAL: Inlined relevant portions of Scope::Guard, meaning
+          autodie can be installed with no dependencies.  (It still
+          recommends IPC::System::Simple.)
+
 1.10_07  Sun Jun 29 15:54:26 AEST 2008
 	* RELEASE CODENAME: "ikegami", in thanks for solving the problem
 	  of getting lexical replacement of subroutines working for real
